<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/UpdateRollNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/RollNumber"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/UpdateName"
        app:layout_constraintEnd_toEndOf="@+id/UpdateName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/UpdateName"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/UpdateName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/StudentName"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/UpdateSwitchStudent"
        app:layout_constraintEnd_toEndOf="@+id/UpdateSwitchStudent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/UpdateSwitchStudent"
        app:layout_constraintTop_toBottomOf="@+id/UpdateRollNumber" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/UpdateSwitchStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/IsEnrolled"
        app:layout_constraintBottom_toTopOf="@+id/buttonUpdate"
        app:layout_constraintEnd_toEndOf="@+id/buttonUpdate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/buttonUpdate"
        app:layout_constraintTop_toBottomOf="@+id/UpdateName" />

    <TextView
        android:id="@+id/UpdateMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/UpdateViewAllRecords"
        app:layout_constraintEnd_toEndOf="@+id/UpdateViewAllRecords"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/UpdateViewAllRecords"
        app:layout_constraintTop_toBottomOf="@+id/buttonUpdate" />

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Update"
        app:layout_constraintBottom_toTopOf="@+id/UpdateMessage"
        app:layout_constraintEnd_toEndOf="@+id/UpdateMessage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/UpdateMessage"
        app:layout_constraintTop_toBottomOf="@+id/UpdateSwitchStudent" />

    <Button
        android:id="@+id/UpdateViewAllRecords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonViewAll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UpdateMessage" />


</androidx.constraintlayout.widget.ConstraintLayout>