<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonCreateActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Add"
        app:layout_constraintBottom_toTopOf="@+id/buttonUpdateActivity"
        app:layout_constraintEnd_toStartOf="@+id/buttonReadActivity"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonReadActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Read"
        app:layout_constraintBottom_toBottomOf="@+id/buttonCreateActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonCreateActivity"
        app:layout_constraintTop_toTopOf="@+id/buttonCreateActivity" />

    <Button
        android:id="@+id/buttonUpdateActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Update"
        app:layout_constraintBottom_toTopOf="@+id/ViewAllStudents"
        app:layout_constraintEnd_toStartOf="@+id/buttonDeleteActivity"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCreateActivity" />

    <Button
        android:id="@+id/buttonDeleteActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Remove"
        app:layout_constraintBottom_toBottomOf="@+id/buttonUpdateActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonUpdateActivity"
        app:layout_constraintTop_toTopOf="@+id/buttonUpdateActivity" />

    <ListView
        android:id="@+id/ViewAllStudents"
        android:layout_width="match_parent"
        android:layout_height="700dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonUpdateActivity" />
</androidx.constraintlayout.widget.ConstraintLayout>