<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/ReadName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/StudentName"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/ReadRollNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ReadRollNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/RollNumber"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/ReadSwitchStudent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ReadName"
        tools:ignore="Autofill" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/ReadSwitchStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:showText="true"
        android:text="@string/IsEnrolled"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/buttonRead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ReadRollNumber"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/buttonRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Read"
        app:layout_constraintBottom_toTopOf="@+id/ReadMessage"
        app:layout_constraintEnd_toStartOf="@+id/ReadViewAllRecords"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ReadSwitchStudent" />

    <Button
        android:id="@+id/ReadViewAllRecords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonViewAll"
        app:layout_constraintBottom_toBottomOf="@+id/buttonRead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonRead"
        app:layout_constraintTop_toTopOf="@+id/buttonRead" />

    <TextView
        android:id="@+id/ReadMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/ReadListViewStudent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRead" />

    <ListView
        android:id="@+id/ReadListViewStudent"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ReadMessage"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>