<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/DeleteRollNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/RollNumber"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/buttonDelete"
        app:layout_constraintEnd_toEndOf="@+id/buttonDelete"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/buttonDelete"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Remove"
        app:layout_constraintBottom_toTopOf="@+id/DeleteMessage"
        app:layout_constraintEnd_toEndOf="@+id/DeleteMessage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/DeleteMessage"
        app:layout_constraintTop_toBottomOf="@+id/DeleteRollNumber" />

    <TextView
        android:id="@+id/DeleteMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/DeleteViewAllRecord"
        app:layout_constraintEnd_toEndOf="@+id/DeleteViewAllRecord"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/DeleteViewAllRecord"
        app:layout_constraintTop_toBottomOf="@+id/buttonDelete" />

    <Button
        android:id="@+id/DeleteViewAllRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonViewAll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DeleteMessage" />


</androidx.constraintlayout.widget.ConstraintLayout>